...
    val spacing = LocalBanSpacing

    Column(modifier = modifier.fillMaxWidth()) {
        BanTextField(
            value = uiState.correo,
            onValueChange = onCorreoChanged,
            placeholder = "tu@email.com",
            isError = uiState.correoError != null,
            supportingText = uiState.correoError,
            keyboardOptions = KeyboardOptions(
                keyboardType = KeyboardType.Email,
                imeAction = ImeAction.Next
            )
...

        Spacer(modifier = Modifier.height(spacing.large))

        BanTextField(
            value = uiState.contrasena,
            onValueChange = onContrasenaChanged,
            placeholder = "********",
            isError = uiState.contrasenaError != null,
            supportingText = uiState.contrasenaError,
            visualTransformation = if (uiState.mostrarContrasena) {
                VisualTransformation.None
            } else {
                PasswordVisualTransformation()
...
